oidc-auth/overlays/keycloak/ovh/auth-gateway-cloud.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: auth-gateway-cloud
  namespace: auth
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "*.kubefrog.fr"
    external-dns.alpha.kubernetes.io/target: "172.22.80.100"
    #external-dns.alpha.kubernetes.io/target: "176.185.193.54"
    external-dns.alpha.kubernetes.io/ttl: "120"
    #external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"

spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - auth.kubefrog.fr
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
#    tls:
#      httpsRedirect: true
  - hosts:
    - auth.kubefrog.fr
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-ingressgateway-certs-kubefrog
